--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,43 @@
-pandas
-streamlit
+streamlit==1.19.0
+altair==4.2.2
+pandas==3.0.0
+numpy==2.4.2
+
+altair==4.2.2
+attrs==25.4.0
+blinker==1.9.0
+cachetools==7.0.1
+certifi==2026.1.4
+charset-normalizer==3.4.4
+click==8.3.1
+gitdb==4.0.12
+gitpython==3.1.46
+idna==3.11
+importlib-metadata==8.7.1
+jinja2==3.1.6
+jsonschema==4.26.0
+jsonschema-specifications==2025.9.1
+markdown-it-py==4.0.0
+markupsafe==3.0.3
+mdurl==0.1.2
+narwhals==2.16.0
+numpy==2.4.2
+packaging==26.0
+pandas==3.0.0
+pillow==12.1.1
+protobuf==3.20.3
+pyarrow==23.0.1
+pydeck==0.9.1
+pygments==2.19.2
+pympler==1.1
+python-dateutil==2.9.0.post0
+referencing==0.37.0
+requests==2.32.5
+rich==14.3.2
+rpds-py==0.30.0
+semver==3.0.4
+six==1.17.0
+smmap==5.0.2
+streamlit==1.19.0
+toml==0.10.2
+tornado==6.5.4
