--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 streamlit==1.19.0
 altair==4.2.2
-pandas==3.0.0
-numpy==2.4.2
+pandas==2.3.3      # ← تغییر دادم به نسخه سازگار با Python 3.10
+numpy==1.26.4       # ← نسخه numpy سازگار با pandas 2.3
 attrs==25.4.0
 blinker==1.9.0
 cachetools==7.0.1
@@ -22,7 +22,7 @@ narwhals==2.16.0
 packaging==26.0
 pillow==12.1.1
 protobuf==3.20.3
-pyarrow==23.0.1
+pyarrow==11.0.0      # ← نسخه پایین‌تر و سازگار
 pydeck==0.9.1
 pygments==2.19.2
 pympler==1.1
